--- a/Views/HO_CallesPage.xaml
+++ b/Views/HO_CallesPage.xaml
@@ -3,14 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ExamenHansOrtiz.Views.HO_CallesPage"
              Title="HO_CallesPage">
+    <Grid>
+    <!-- Lista de calles -->
     <CollectionView ItemsSource="{Binding Calles}" SelectionMode="Single" SelectionChanged="OnCalleSelected">
         <CollectionView.ItemTemplate>
             <DataTemplate>
-                <StackLayout Padding="10">
-                    <Label Text="{Binding Nombre}" FontSize="Medium"/>
-                    <Label Text="{Binding TipoVia}" FontSize="Small"/>
+                <StackLayout Padding="10" BackgroundColor="LightGray" Margin="5">
+                    <Label Text="{Binding Nombre}" FontSize="Medium" FontAttributes="Bold" TextColor="Black" />
+                    <Label Text="{Binding TipoVia}" FontSize="Small" TextColor="Gray" />
                 </StackLayout>
             </DataTemplate>
         </CollectionView.ItemTemplate>
     </CollectionView>
+    <!-- Botón para ver calles guardadas -->
+    <Button Text="Ver Calles Guardadas" VerticalOptions="End" HorizontalOptions="End" Margin="20" Padding="15" BackgroundColor="#2196F3" TextColor="White" Clicked="OnVerCallesGuardadasClicked" />
+    </Grid>
 </ContentPage>
